2008-10-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-active-region-or-url-at-point): Take notice of the link
	under the point as well; return the url of the current page by default
	if the new optional argument `default=current' is given.
	(w3m-input-url): Make w3m-active-region-or-url-at-point return the url
	of the current page by default; modify the prompt string according to
	whether there is an initial input.
	(w3m-download, w3m-goto-url, w3m-goto-url-new-session): Simplify args
	passed to w3m-input-url.
	(w3m-view-this-url): Make w3m-active-region-or-url-at-point return the
	url of the current page by default.

2008-10-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-italic): Make it be a underline face on a non-window
	system by default.

2008-09-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-toggle-inline-images-internal)
	(w3m-resize-inline-image-internal): Confirm whether to retrieve
	insecure image only once, or don't confirm it if
	w3m-confirm-leaving-secure-page is nil.  Suggested by Dan Jacobson
	<jidanni@jidanni.org>.
	(w3m-confirm-leaving-secure-page): Doc fix.

	* w3mhack.el (w3mhack-makeinfo): Remove Emacs 19 stuff; remove TeX
	directives first; don't call texinfo-mode.

2008-09-21  Akinori MUSHA  <knu@iDaemons.org>

	* doc/emacs-w3m.texi (Image Variables): Fix syntax error.

	* doc/emacs-w3m-ja.texi (Image Variables): Ditto.

2008-09-17  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-buffer-local-url): New constant variable.
	(w3m-buffer-local-url-p): New function.
	(w3m-goto-url): Also process buffer local url.
	(w3m-region): Use w3m-buffer-local-url as url if it is not set.
	(w3m-safe-view-this-url, w3m-mouse-safe-view-this-url): Check if url is
	buffer local.

2008-09-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-download): Add doc string.
	(w3m-lynx-like-map): Bind M-d key to w3m-download.
	(w3m-mode): Add w3m-download to major mode info; clarify description of
	w3m-download-this-url.
